--- a/Pages/SupplierPage.xaml
+++ b/Pages/SupplierPage.xaml
@@ -18,7 +18,7 @@
                                     DisplayMemberBinding="{Binding Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" />
                     <GridViewColumn Header="Поставщик" DisplayMemberBinding="{Binding Supplier.Name}" />
                     <GridViewColumn Header="Количество (шт)" DisplayMemberBinding="{Binding Count }" />
-                    <GridViewColumn Header="Товар" DisplayMemberBinding="{Binding Products.Name }" />
+                    <GridViewColumn Header="Товар" DisplayMemberBinding="{Binding Product.Name }" />
                     <GridViewColumn>
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
