feat: add several products

--- a/Modals/AddSupplyModal.xaml
+++ b/Modals/AddSupplyModal.xaml
@@ -11,8 +11,6 @@
         <Label Content="Дата:" Margin="0 10 0 0" />
         <xctk:DateTimePicker x:Name="DatePicker" Margin="10" />
 
-
-
         <Label Content="Поставщик:" />
         <Grid>
             <Grid.ColumnDefinitions>
@@ -25,20 +23,30 @@
             <Button Click="DeleteSupplierButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
         </Grid>
 
-        <Label Content="Товар:" />
+        <Label Content="Товары:" />
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="30" />
                 <ColumnDefinition Width="30" />
             </Grid.ColumnDefinitions>
-            <ComboBox x:Name="ProductComboBox" Style="{StaticResource ComboBoxStyle}" Margin="10" />
+            <ListBox x:Name="ProductListBox" Height="60" SelectionMode="Multiple" Margin="10" />
             <Button Click="AddProductButton_Click" Grid.Column="1" Content="+" Width="20" Height="20" FontSize="10" />
             <Button Click="DeleteProductButton_Click" Grid.Column="2" Content="-" Width="20" Height="20" FontSize="10" />
         </Grid>
 
         <Label Content="Количество:" />
         <TextBox x:Name="CountTextBox" Margin="10" PreviewTextInput="NumberTextBox_PreviewTextInput" />
+
+        <Button Content="Добавить товар в поставку" Style="{StaticResource ButtonStyle}" Click="AddProductToSupplyButton_Click" Margin="10 0" />
+
+        <DataGrid x:Name="SelectedProductsDataGrid" AutoGenerateColumns="False" Margin="10" Height="150">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Товар" Binding="{Binding Product.Name}" Width="*" />
+                <DataGridTextColumn Header="Количество" Binding="{Binding Count}" Width="100" />
+            </DataGrid.Columns>
+        </DataGrid>
+
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Height="30">
             <Button Content="Добавить" Style="{StaticResource ButtonStyle}" Click="AddButton_Click" />
             <Button Content="Отмена" Style="{StaticResource ButtonStyle}" Click="CancelButton_Click" />
