--- a/Pages/AcceptanceActPage.xaml
+++ b/Pages/AcceptanceActPage.xaml
@@ -27,17 +27,14 @@
             </Grid.RowDefinitions>
 
             <!-- Данные акта -->
-            <!-- Остальные TextBlock'и оставляем без изменений -->
             <TextBlock Text="Дата:" FontSize="16" FontWeight="Bold" Grid.Row="0" />
-            <TextBlock Text="{Binding Suppply.Date}" FontSize="16" Grid.Row="0" Grid.Column="1" />
+            <TextBlock Text="{Binding Supply.Date, StringFormat='{}{0:dd.MM.yyyy HH:mm}'}" FontSize="16" Grid.Row="0" Grid.Column="1" />
             <TextBlock Text="Наименование товара:" FontSize="16" FontWeight="Bold" Grid.Row="1" />
-            <TextBlock Text="{Binding Suppply.Product.Name}" FontSize="16" Grid.Row="1" Grid.Column="1" />
+            <TextBlock Text="{Binding Supply.ProductsString}" FontSize="16" Grid.Row="1" Grid.Column="1" />
             <TextBlock Text="Количество:" FontSize="16" FontWeight="Bold" Grid.Row="2" />
-            <TextBlock Text="{Binding Suppply.Count}" FontSize="16" Grid.Row="2" Grid.Column="1" />
-            <TextBlock Text="Категория:" FontSize="16" FontWeight="Bold" Grid.Row="4" />
-            <TextBlock Text="{Binding Suppply.Product.Category.Name}" FontSize="16" Grid.Row="4" Grid.Column="1" />
+            <TextBlock Text="{Binding Supply.CountString}" FontSize="16" Grid.Row="2" Grid.Column="1" />
             <TextBlock Text="Поставщик:" FontSize="16" FontWeight="Bold" Grid.Row="5" />
-            <TextBlock Text="{Binding Suppply.Supplier.Name}" FontSize="16" Grid.Row="5" Grid.Column="1" />
+            <TextBlock Text="{Binding Supply.Supplier.Name}" FontSize="16" Grid.Row="5" Grid.Column="1" />
 
             <!-- Подпись -->
             <TextBlock Text="Подпись получателя:" FontSize="16" FontWeight="Bold" Grid.Row="7" Margin="0,20" />
@@ -52,7 +49,6 @@
                 <Button Content="Экспорт в  Word" Width="150" Margin="10" Style="{StaticResource ButtonStyle}"
                         Click="ExportAcceptanceAct_Click" />
             </StackPanel>
-
         </Grid>
     </Grid>
 </Page>
